--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "pureba-angular-02",
   "version": "0.0.0",
   "scripts": {
+    "json-server": "json-server --watch db.json --port 3000",
+    "start:server": "json-server --watch db.json --port 3001",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -20,6 +22,9 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,6 +35,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
+    "json-server": "^1.0.0-beta.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
